--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild":"ng build --configuration production --aot"
+    "heroku-postbuild": "ng build --configuration production --aot"
   },
   "engines": {
-    "node":"16.16.0",
-    "npm":"8.11.0" 
+    "node": "16.16.0",
+    "npm": "8.11.0"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
